--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@ button {cursor: pointer; border-radius: 5px;}
 p, span, a, button, label, li {font-family: 'Lato', sans-serif; text-decoration: none; line-height: 14px; color: #484848;}
 p:hover, span:hover, a:hover, button:hover, label:hover, li:hover,
 p:focus, span:focus, a:focus, button:focus, label:focus, li:focus {text-decoration: none;}
+.row {margin: 0;}
 body {color: #555;}
 
 main.body {position: relative; max-width: 1200px; margin: 0 auto; padding-top: 50px; background: #FFF;}
@@ -118,6 +119,7 @@ main.browsePage .recentAcquisitions .carousel-control.right {background: none;}
 main.browsePage .recentAcquisitions .carousel.slide .carousel-inner .item .listContainer {overflow: hidden;}
 main.browsePage .recentAcquisitions .carousel.slide .carousel-inner .item .listContainer .list.col {float: left; width: 33.33%; text-align: center;}
 main.browsePage .recentAcquisitions .carousel.slide .carousel-inner .item .listContainer .list.col img {max-width: 250px;}
+main.browsePage .recentAcquisitions .carousel.slide .carousel-inner .item .listContainer .list.col p {line-height: 18px;}
 main.browsePage .recentAcquisitions .carousel.slide .carousel-inner .item .listContainer .list.col p:nth-child(2) {font-weight: bold;}
 main.browsePage .recentAcquisitions .header p:nth-child(1) {font-size: 20px; line-height: 20px;}
 main.browsePage .recentAcquisitions .header p:nth-child(2) {font-size: 12px;}
@@ -153,3 +155,61 @@ main.recentAcquisitionsPage .browseList .itemRow .col:nth-child(5) {width: 10%; 
 main.recentAcquisitionsPage .browseList .itemRow .col:nth-child(6) {width: 10%; text-align: center;}
 main.recentAcquisitionsPage .browseList .itemRow:nth-child(1) .col {font-weight: bold; text-align: center; font-size: 16px;}
 main.recentAcquisitionsPage .browseList .itemRow:nth-last-child(1) {border-bottom: 1px solid #888;}
+
+main.advancedSearchPage .search {padding-bottom: 30px;}
+main.advancedSearchPage .search form {margin: 0 auto; max-width: 600px;}
+main.advancedSearchPage .search form input[type="text"] {width: 70%; padding: 10px; box-sizing: border-box; margin: 10px auto 25px; border: 1px #014fb3 solid; display: inline-block;}
+main.advancedSearchPage .search form button {height: 43px; background: #014fb3; border: none; color: #FFF; width: 30%; margin: 15px 0 0 -4px; display: inline-block; border-radius: 0px;}
+main.advancedSearchPage .search form button:hover {background: #003a84;}
+main.advancedSearchPage .search form .filters {overflow: auto; border: 1px solid #014fb3; padding: 15px; margin-bottom: 15px;}
+main.advancedSearchPage .search form .filters p {font-size: 14px; font-weight: bold; margin-bottom: 5px;}
+main.advancedSearchPage .search form .filters .block {width: 33.33%; float: left;}
+main.advancedSearchPage .search form .filters .block .year select {display: inline-block;}
+main.advancedSearchPage .search form .filters .block .year label {display: block; margin: 8px 0;}
+main.advancedSearchPage .search form .filters .block .genre select {display: inline-block;}
+main.advancedSearchPage .search form .filters .block .genre label {display: block; margin: 0px 0 8px;}
+main.advancedSearchPage .search form .filters .block label {font-weight: normal; margin-left: 5px;}
+main.advancedSearchPage .control {margin-top: 25px; overflow: hidden;}
+main.advancedSearchPage .control .header {float: left; width: 50%;}
+main.advancedSearchPage .control .sort {float: left; width: 50%; text-align: right;}
+main.advancedSearchPage .control .sort select {width: 100%; max-width: 200px;}
+main.advancedSearchPage .control .header p {font-size: 20px; line-height: 20px;}
+main.advancedSearchPage .browseList {margin-top:25px;}
+main.advancedSearchPage .browseList .itemRow {overflow: auto; border-left: 1px solid #888; border-top: 1px solid #888;}
+main.advancedSearchPage .browseList .itemRow .col {float: left; border-right: 1px solid #888;}
+main.advancedSearchPage .browseList .itemRow .col:nth-child(1) {width: 40%;}
+main.advancedSearchPage .browseList .itemRow .col:nth-child(2) {width: 20%;}
+main.advancedSearchPage .browseList .itemRow .col:nth-child(3) {width: 10%; text-align: center;}
+main.advancedSearchPage .browseList .itemRow .col:nth-child(4) {width: 10%; text-align: center;}
+main.advancedSearchPage .browseList .itemRow .col:nth-child(5) {width: 10%; text-align: center;}
+main.advancedSearchPage .browseList .itemRow .col:nth-child(6) {width: 10%; text-align: center;}
+main.advancedSearchPage .browseList .itemRow:nth-child(1) .col {font-weight: bold; text-align: center; font-size: 16px;}
+main.advancedSearchPage .browseList .itemRow:nth-last-child(1) {border-bottom: 1px solid #888;}
+
+main.materialPage {padding: 150px 0;}
+main.materialPage .blockWrapper {overflow: hidden;}
+main.materialPage .blockWrapper .block {float: left; width: 25%;}
+main.materialPage .blockWrapper .block .wrapper {max-width: 200px;}
+main.materialPage .blockWrapper .block:nth-child(3) {float: right; max-width: 200px;}
+main.materialPage .blockWrapper .block .messageContainer p {font-size: 20px; line-height: 20px;}
+main.materialPage .blockWrapper .block .viewedContainer {max-width: 200px;}
+main.materialPage .blockWrapper .block .viewedContainer .row img {max-width: 100px; margin-top: 20px;}
+main.materialPage .blockWrapper .block .viewedContainer .row {text-align: center;}
+main.materialPage .blockWrapper .block .viewedContainer .row p {line-height: 18px;}
+main.materialPage .blockWrapper .block .viewedContainer .row p:nth-child(2) {font-weight: bold; font-size: 16px;}
+main.materialPage .blockWrapper .block .collectionContainer {max-width: 200px; overflow: hidden;}
+main.materialPage .blockWrapper .block .collectionContainer .row img {max-width: 100px; margin-top: 20px;}
+main.materialPage .blockWrapper .block .collectionContainer .row {text-align: center;}
+main.materialPage .blockWrapper .block .collectionContainer .row p {line-height: 18px;}
+main.materialPage .blockWrapper .block .collectionContainer .row p:nth-child(2) {font-weight: bold; font-size: 16px;}
+
+main.materialPage .blockWrapper .mid.block {width: 50%;}
+main.materialPage .blockWrapper .mid.block img {max-width: 200px;}
+
+main.materialPage .blockWrapper .block .information .row .col {display: inline-block; height: 100%;}
+main.materialPage .blockWrapper .block .information .row .col:nth-child(1) {width: 25%;}
+main.materialPage .blockWrapper .block .information .row .col:nth-child(2) {width: 70%;}
+main.materialPage .blockWrapper .block .container {max-width: 600px; margin: 0 auto; padding: 0px 20px 50px; border: 1px solid #888;}
+main.materialPage .blockWrapper .block .container img {display: block; margin: 0 auto 50px; padding-top: 50px;}
+main.materialPage .blockWrapper .block .container a {padding-top: 10px; display: inline-block;}
+main.materialPage .blockWrapper .block .container a:nth-child(2) {margin-left: 10px;}
