--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,16 +161,24 @@ main.recentAcquisitionsPage .browseList .itemRow .col:nth-child(6) {width: 10%; 
 main.recentAcquisitionsPage .browseList .itemRow:nth-child(1) .col {font-weight: bold; text-align: center; font-size: 16px;}
 main.recentAcquisitionsPage .browseList .itemRow:nth-last-child(1) {border-bottom: 1px solid #888;}
 
+main.advancedSearchPage {padding: 100px 0;}
 main.advancedSearchPage .search {padding-bottom: 30px;}
-main.advancedSearchPage .search form {margin: 0 auto; max-width: 600px;}
+main.advancedSearchPage .search form {margin: 0 auto; max-width: 100%;}
 main.advancedSearchPage .search form input[type="text"] {width: 70%; padding: 10px; box-sizing: border-box; margin: 10px auto 25px; border: 1px #014fb3 solid; display: inline-block;}
 main.advancedSearchPage .search form button {height: 43px; background: #014fb3; border: none; color: #FFF; width: 30%; margin: 15px 0 0 -4px; display: inline-block; border-radius: 0px;}
 main.advancedSearchPage .search form button:hover {background: #003a84;}
+main.advancedSearchPage .search form .query {max-width: 600px; margin: 0 auto;}
 main.advancedSearchPage .search form .filters {overflow: auto; border: 1px solid #014fb3; padding: 15px; margin-bottom: 15px;}
 main.advancedSearchPage .search form .filters p {font-size: 14px; font-weight: bold; margin-bottom: 5px;}
-main.advancedSearchPage .search form .filters .block {width: 33.33%; float: left;}
+main.advancedSearchPage .search form .filters .block {width: 15%; float: left;}
+main.advancedSearchPage .search form .filters .block > p {padding-bottom: 10px; margin-bottom: 10px; border-bottom: #CCC solid 1px;}
+main.advancedSearchPage .search form .filters .right.block {width: 50%; overflow: auto;}
+main.advancedSearchPage .search form .filters .right.block .divider {float: left; width: 50%;}
+main.advancedSearchPage .search form .filters .last.block {width: 20%;}
 main.advancedSearchPage .search form .filters .block .year select {display: inline-block;}
 main.advancedSearchPage .search form .filters .block .year label {display: block; margin: 8px 0;}
+main.advancedSearchPage .search form .filters .block .year label:nth-child(5) {margin-top: 20px;}
+main.advancedSearchPage .search form .filters .block .year input {padding: 5px; margin: 0; border-color: #888;}
 main.advancedSearchPage .search form .filters .block .genre select {display: inline-block;}
 main.advancedSearchPage .search form .filters .block .genre label {display: block; margin: 0px 0 8px;}
 main.advancedSearchPage .search form .filters .block label {font-weight: normal; margin-left: 5px;}
@@ -217,6 +225,7 @@ main.materialPage .blockWrapper .block .information .row .col:nth-child(2) {widt
 main.materialPage .blockWrapper .block .container {max-width: 600px; margin: 0 auto; padding: 0px 20px 50px; border: 1px solid #888;}
 main.materialPage .blockWrapper .block .container img {display: block; margin: 0 auto 50px; padding-top: 50px;}
 main.materialPage .blockWrapper .block .container a {padding-top: 10px; display: inline-block;}
+main.materialPage .blockWrapper .block .container a.lend {float: right;}
 main.materialPage .blockWrapper .block .container a:nth-child(2) {margin-left: 10px;}
 
 main.materialPage .feedbackWrapper {max-width: 50%; margin: 50px auto 20px;}
@@ -284,3 +293,28 @@ main.addUserPage .divWrapper .left.block .formContainer form .name input {width:
 main.addUserPage .divWrapper .left.block .formContainer form .name input:nth-child(2) {margin: 10px 2.51%;}
 main.addUserPage .divWrapper .left.block .formContainer form .class input {width: 30%;}
 main.addUserPage .divWrapper .left.block .formContainer form .class select {width: 67.5%; margin-left: 2.5%;}
+
+main.lendPage {max-width: 1024px; padding-top: 100px;}
+main.lendPage .divWrapper {overflow: auto; margin: 0 auto; max-width: 800px;}
+main.lendPage .divWrapper .formContainer {margin-top: 50px;}
+main.lendPage .divWrapper .formContainer form.main .borrower {text-align: left; border-top: 2px solid #CCC; margin-top: 20px; padding-top: 15px;}
+main.lendPage .divWrapper .formContainer form.main .borrower .information label {padding: 15px 0 0; display: block;}
+main.lendPage .divWrapper .formContainer form.main .borrower .information p {line-height: 20px;}
+main.lendPage .divWrapper .formContainer form.main .borrower button {margin: 30px auto 0; display: block;}
+main.lendPage .divWrapper .formContainer form.main .highlight {text-align: left;}
+main.lendPage .divWrapper .formContainer form.main .highlight label {font-size: 16px;}
+main.lendPage .divWrapper .formContainer form.main .highlight p {font-size: 20px; padding-top: 10px;}
+main.lendPage .divWrapper .formContainer form.main .search {overflow: auto;}
+main.lendPage .divWrapper .formContainer form.main .search input {width: 70%; float: left;}
+main.lendPage .divWrapper .formContainer form.main .search button {position: relative; width: 30%; left: -2px; float: left; height: 42px; border-radius: 0; margin: 10px 0;}
+main.lendPage .divWrapper .formContainer form input, 
+main.lendPage .divWrapper .formContainer form select,
+main.lendPage .divWrapper .formContainer form textarea {width: 100%; padding: 10px; box-sizing: border-box; margin: 10px auto;}
+main.lendPage .divWrapper .formContainer form textarea:nth-child(2) {height: 100px; resize: none;}
+main.lendPage .divWrapper .formContainer form textarea:nth-child(3) {height: 300px; resize: none;}
+main.lendPage .divWrapper .formContainer p {font-size: 20px;}
+main.lendPage .divWrapper .formContainer form.main button {padding: 10px; background: #014fb3; border: none; color: #FFF; width: 100%; max-width: 250px; margin-top: 15px;}
+main.lendPage .divWrapper .formContainer form button:hover {background: #003a84;}
+main.lendPage .divWrapper .formContainer form.main .search {overflow: auto;}
+/*main.lendPage .divWrapper .left.block .formContainer form .search input {float: left; width: 70%; padding: 10px; height: 42px;}
+main.lendPage .divWrapper .left.block .formContainer form .search button {float: left; width: 30%; height: 42px;}*/
